--- a/Index.html
+++ b/Index.html
@@ -15,7 +15,8 @@
      <p><br>Telefono:<p><br>3012079258</p>
      <p><br>Correo electronico:<p><br>lrdazamu@unadvirtual.edu.co</p>
      <p><br>Centro:<p><br>CEAD_Valledupar-Cesar</p>
-
+     <hr>
+     <a href="fase2/design.html">Actividad de la Fase 2</a>
  </p>
 </body>
 </html>
