--- a/fase2/design.html
+++ b/fase2/design.html
@@ -57,10 +57,28 @@
     </section>
     <article>
         <h3>Etiquetas básicas de HTML, atributos y valores</h3>
-        <p>HTML es un markup language, lo que significa que está escrito con códigos que puede leer una persona sin que sea necesario compilarlo primero <br> 
-            Estas etiquetas de marcado son las que se denomina etiquetas HTML.<br> 
-            Entre las etiquetas basicas encontramos body, head, div, a, strong. 
-            <h6>https://elibro-net.bibliotecavirtual.unad.edu.co/es/ereader/unad/56045</h6>
+        
+        <p>Etiquetas básicas de HTML son fragmentos de texto que se usan para dar propiedades específicas al texto cuando escribimos en código html,<br> 
+           estas se caracterizan porque van dentro de los caracteres menor que < y mayor que «>", como en este ejemplo: "<Aquí dentro va el nombre de la etiqueta>". <br>
+           <br>
+
+           Debido a que deben tener un inicio y un fin, el inicio de una etiqueta es normal, en otras palabras, lleva los dos caracteres mencionados <br> 
+           y dentro de estos se encuentra el nombre, sin embargo, existe una diferencia para el fin de la etiqueta ya que antes de escribir el nombre <br>
+           de la etiqueta debemos escribir una diagonal "/". <br>
+
+           <br>
+           Entre las etiquetas basicas encontramos body, head, div, a, strong. <br>
+           
+           <br>
+           Los atributos de HTML son palabras especiales utilizadas dentro de la etiqueta de apertura, para controlar el comportamiento del elemento. <br>
+           <br>
+           Los atributos de HTML son un modificador de un tipo de elemento de HTML. Un atributo tampoco modifica la funcionalidad por defecto de un tipo de elemento o proporciona funcionalidad <br>
+           a ciertos tipos de elementos incapaces de funcionar correctamente sin ellos. . En sintaxis HTML, un atributo se añade a una etiqueta de inicio de HTML. <br>
+           <br>
+           Entre  los atributos  encontramos: accept, align, alt, async, bgcolor. <br>
+           <br>
+           <img src="img/etiquetas.jpg" alt="imagen ilustrativa">
+            <h6>Digital cubik (2021). Etiquetas Básicas de HTML. https://digitalcubik.com/diccionario-marketing-digital/e/etiquetas-basicas-de-html/ </h6>
 
         </p>
         <img src="img/Mockup_Sitio.JPG" alt="Boceto de la pagina">
