--- a/fase2/design.html
+++ b/fase2/design.html
@@ -59,7 +59,7 @@
         <h3>Etiquetas básicas de HTML, atributos y valores</h3>
         
         <p>Etiquetas básicas de HTML son fragmentos de texto que se usan para dar propiedades específicas al texto cuando escribimos en código html,<br> 
-           estas se caracterizan porque van dentro de los caracteres menor que < y mayor que «>", como en este ejemplo: "<Aquí dentro va el nombre de la etiqueta>". <br>
+           estas se caracterizan porque van dentro de los caracteres menor que < y mayor que «>. <br>
            <br>
 
            Debido a que deben tener un inicio y un fin, el inicio de una etiqueta es normal, en otras palabras, lleva los dos caracteres mencionados <br> 
