--- a/fase3/audiovisual1.html
+++ b/fase3/audiovisual1.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>audiovisual1</title>
     <link rel="stylesheet" href="css/estilos.css">
-    
+
     <style>
         * {
             margin: 0;
@@ -62,14 +62,14 @@
         .dropdown-1 li:hover {
             display: block;
         }
-
     </style>
 </head>
 
 <body>
     <header>
-        <h1>Portal web para el aprendizaje de Etiquetas Básicas de HTML, Atributos y Valores</h1>
         <img src="img/logo.png" alt="Logotipo UNAD">
+        <h1>Portal web para el aprendizaje de Etiquetas Básicas de HTML, Atributos y Valores</h1>
+        
     </header>
     <nav>
         <nav class="menu-area">
@@ -86,6 +86,12 @@
                         <li> <a href="audiovisual1.html">Recurso 1</a> </li>
                         <li><a href="audiovisual2.html">Recurso 2</a></li>
                     </ul>
+                <li><a href="#">Actividad</a>
+                    <ul class="dropdown-1">
+                        <li> <a href="#">Actividad 1</a> </li>
+                        <li><a href="#">Actividad 2</a></li>
+                    </ul>
+                </li>
                 </li>
                 <li><a href="autor.html">Autor</a></li>
             </ul>
@@ -99,7 +105,7 @@
         <section>
             <article>
 
-                <iframe width="930" height="450" src="https://www.youtube.com/embed/gHIQ1ik1x2U"
+                <iframe width="930" height="450" src="https://www.youtube.com/embed/iOKn8bRPaRE"
                     title="YouTube video player" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen></iframe>
