--- a/fase3/tema1.html
+++ b/fase3/tema1.html
@@ -67,8 +67,9 @@
 
 <body>
     <header>
-        <h1>Portal web para el aprendizaje de Etiquetas Básicas de HTML, Atributos y Valores</h1>
         <img src="img/logo.png" alt="Logotipo UNAD">
+        <h1>Portal web para el aprendizaje de Etiquetas Básicas de HTML, Atributos y Valores</h1>
+        
     </header>
     <nav>
         <nav class="menu-area">
@@ -85,6 +86,12 @@
                         <li> <a href="audiovisual1.html">Recurso 1</a> </li>
                         <li><a href="audiovisual2.html">Recurso 2</a></li>
                     </ul>
+               <li><a href="#">Actividad</a>
+                        <ul class="dropdown-1">
+                            <li> <a href="#">Actividad 1</a> </li>
+                            <li><a href="#">Actividad 2</a></li>
+                        </ul>
+                </li>
                 </li>
                 <li><a href="autor.html">Autor</a></li>
             </ul>
