--- a/fase3/index.html
+++ b/fase3/index.html
@@ -61,14 +61,14 @@
         .dropdown-1 li:hover {
             display: block;
         }
-
     </style>
 </head>
 
 <body>
     <header>
-        <h1>Portal web para el aprendizaje de Etiquetas Básicas de HTML, Atributos y Valores</h1>
         <img src="img/logo.png" alt="Logotipo UNAD">
+        <h1>Portal web para el aprendizaje de Etiquetas Básicas de HTML, Atributos y Valores</h1>
+
     </header>
     <nav>
         <nav class="menu-area">
@@ -85,6 +85,11 @@
                         <li> <a href="audiovisual1.html">Recurso 1</a> </li>
                         <li><a href="audiovisual2.html">Recurso 2</a></li>
                     </ul>
+                <li><a href="#">Actividad</a>
+                    <ul class="dropdown-1">
+                        <li> <a href="#">Actividad 1</a> </li>
+                        <li><a href="#">Actividad 2</a></li>
+                    </ul>
                 </li>
                 <li><a href="autor.html">Autor</a></li>
             </ul>
@@ -98,37 +103,47 @@
             <article>
                 <h3>Pagina de Inicio</h3>
                 <br>
-                <p>
-                    Etiquetas básicas de HTML son fragmentos de texto que se usan para dar propiedades específicas al
-                    texto cuando escribimos en código html,<br>
-                    estas se caracterizan porque van dentro de los caracteres menor que < y mayor que «>. <br>
-                        <br>
-
-                        Debido a que deben tener un inicio y un fin, el inicio de una etiqueta es normal, en otras
-                        palabras, lleva los dos caracteres mencionados <br>
-                        y dentro de estos se encuentra el nombre, sin embargo, existe una diferencia para el fin de la
-                        etiqueta ya que antes de escribir el nombre <br>
-                        de la etiqueta debemos escribir una diagonal "/". <br>
-
-                        <br>
-                        Entre las etiquetas basicas encontramos body, head, div, a, strong. <br>
-
-                        <br>
+                <h1>Sitio web para el aprendizaje de los conceptos de etiquetas basicas, atributos y valores en html.
+                </h1>
+                <br>
+                <h4>Propósito:</h4>
+                <p>Este sitio tiene como proposito fomentar el aprendizaje de los conceptos correspondientes al tema
+                    <br>
+                    etiquetas basicas, tributos y valores en html.
                 </p>
+                <br>
+
+                <h4>Introduccion: </h4>
+                <p>
+
+
+                    En este sitio web se abordaran temas de etiquetas básicas, atributos, y valores en html, temáticas
+                    que debemos tener en cuenta a la hora de construir un sitio web. <br>
+                    
+                    <br>
+
+                    Todos nosotros a lo largo de nuestra vida hemos interactuado con diferentes sitios o aplicaciones
+                    web, ya sea para buscar información, para conversar con nuestros amigos, entre muchas otras cosas
+                    más. Incluso, es porque interesa saber de qué se trata HTML y para ello será necesario comprender
+                    cómo está relacionado el término HTML con lo que ves en tu navegador web (Ej. Google Chrome, Mozilla
+                    Firefox, Safari, etc). <br>
+                    
+
+                    <br>
+
+
+                    Actualmente la mayoría de las personas han visto cientos de páginas web pero muchos se preguntarán
+                    ¿Qué es HTML? HTML es un lenguaje de marcado que se utiliza para el desarrollo de páginas de
+                    Internet. Se trata de la siglas que corresponden a HyperText Markup Language, es decir, Lenguaje de
+                    Marcas de Hipertexto.
+
+                </p>
+                <br>
+                <img src="img/imagen01.jpg" alt="Imagen ilustrativa">
             </article>
             <article>
-                <p>
-                    Los atributos de HTML son palabras especiales utilizadas dentro de la etiqueta de apertura, para
-                    controlar el comportamiento del elemento. <br>
-                    <br>
-                    Los atributos de HTML son un modificador de un tipo de elemento de HTML. Un atributo tampoco
-                    modifica la funcionalidad por defecto de un tipo de elemento o proporciona funcionalidad <br>
-                    a ciertos tipos de elementos incapaces de funcionar correctamente sin ellos. . En sintaxis HTML, un
-                    atributo se añade a una etiqueta de inicio de HTML. <br>
-                    <br>
-                    Entre los atributos encontramos: accept, align, alt, async, bgcolor. <br>
-                    <br>
-                </p>
+
+
             </article>
         </section>
         <aside>
