--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
      <p><br>Correo electronico:<p><br>lrdazamu@unadvirtual.edu.co</p>
      <p><br>Centro:<p><br>CEAD_Valledupar-Cesar</p>
      <hr>
+     <a href="fase2/design.html">Actividad de la Fase 2</a><br>
      <a href="fase3/index.html">Actividad de la Fase 3</a>
  </p>
 </body>
