--- a/fase3/audiovisual2.html
+++ b/fase3/audiovisual2.html
@@ -76,8 +76,8 @@
                 <li> <a href="index.html">Inicio</a> </li>
                 <li><a href="#">Temas</a>
                     <ul class="dropdown-1">
-                        <li><a href="tema1.html">tema1</a></li>
-                        <li><a href="tema2.html">tema 2</a></li>
+                        <li><a href="tema1.html">Etiquetas Basicas en HTML</a></li>
+                        <li><a href="tema2.html">Atributos-Valores</a></li>
                     </ul>
                 </li>
                 <li><a href="#">Recursos</a>
