--- a/fase3/tema2.html
+++ b/fase3/tema2.html
@@ -77,8 +77,8 @@
                 <li> <a href="index.html">Inicio</a> </li>
                 <li><a href="#">Temas</a>
                     <ul class="dropdown-1">
-                        <li><a href="tema1.html">tema1</a></li>
-                        <li><a href="tema2.html">tema 2</a></li>
+                        <li><a href="tema1.html">Etiquetas Basicas en HTML</a></li>
+                        <li><a href="tema2.html">Atributos-Valores</a></li>
                     </ul>
                 </li>
                 <li><a href="#">Recursos</a>
@@ -110,7 +110,7 @@
 
             <iframe
                 src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FUniversidadUNAD%2F&tabs=timeline&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId"
-                width="340" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="0"
+                width="550" height="630" style="border:none;overflow:hidden" scrolling="no" frameborder="0"
                 allowfullscreen="true"
                 allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
 
