--- a/fase4/index.html
+++ b/fase4/index.html
@@ -88,7 +88,7 @@
                 <li><a href="#">Aprendizaje</a>
                     <ul class="dropdown-1">
                         <li> <a href="aprendizaje1.html">Aprendizaje 1</a> </li>
-                        <li><a href="#">Aprendizaje 2</a></li>
+                        <li><a href="aprendizaje2.html">Aprendizaje 2</a></li>
                     </ul>
                 </li>
                 <li><a href="autor.html">Autor</a></li>
