--- a/fase4/aprendizaje1.html
+++ b/fase4/aprendizaje1.html
@@ -121,7 +121,7 @@
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item" href="aprendizaje1.html">Aprendizaje 1</a></li>
-                            <li><a class="dropdown-item" href="#">Aprendizaje 2</a></li>
+                            <li><a class="dropdown-item" href="aprendizaje2.html">Aprendizaje 2</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
