--- a/fase4/aprendizaje2.html
+++ b/fase4/aprendizaje2.html
@@ -7,11 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap CSS -->
-    
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 
-    <title>Aprendizaje 1</title>
+    <title>Aprendizaje 2</title>
     <link rel="stylesheet" href="css/estilos.css">
     <style>
         * {
@@ -121,7 +121,7 @@
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item" href="aprendizaje1.html">Aprendizaje 1</a></li>
-                            <li><a class="dropdown-item" href="#">Aprendizaje 2</a></li>
+                            <li><a class="dropdown-item" href="aprendizaje2.html">Aprendizaje 2</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
@@ -137,13 +137,13 @@
             </div>
         </div>
     </nav>
-    <h2> Formulario # 1 para su autoaprendizaje </h2>
+    <h2> Formulario # 2 para su autoaprendizaje </h2>
 
     <div class="contenedor">
         <section>
             <article>
                 <iframe
-                    src="https://docs.google.com/forms/d/e/1FAIpQLSc8dhNsDlltqXdL8dTHqTbOA20A8bJVTuNSAHVWpfOG-BXjyQ/viewform?embedded=true"
+                    src="https://docs.google.com/forms/d/e/1FAIpQLSc6AlLqxveuKAoOqOkaRrlmK-i1pqkhfDW2PppEIoZFn5i_TA/viewform?embedded=true"
                     width="1050" height="1953" frameborder="0" marginheight="0" marginwidth="0">Cargando…</iframe>
             </article>
             <article>
