--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
      <p><br>Centro:<p><br>CEAD_Valledupar-Cesar</p>
      <hr>
      <a href="fase2/design.html">Actividad de la Fase 2</a><br>
-     <a href="fase3/index.html">Actividad de la Fase 3</a>
+     <a href="fase3/index.html">Actividad de la Fase 3</a><br>
+     <a href="fase4/index.html">Actividad de la Fase 4 </a>
  </p>
 </body>
 </html>
