--- a/fase4/index.html
+++ b/fase4/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Etiquetas Básicas de HTML</title>
+    <meta name="keywords" content="etiquetas,basicas,html, atributos">
     <link rel="stylesheet" href="css/estilos.css">
     <style>
         * {
@@ -139,7 +140,7 @@
 
                 </p>
                 <br>
-                <img src="img/imagen01.jpg" alt="Imagen ilustrativa">
+                <img src="img/imagen01.jpg" alt="Etiquetas Basicas">
             </article>
             <article>
 
